adds support for emailing
