# hpcutils/api/specs/api.yaml
@@ -4,6 +4,14 @@ info:
   title: hpcutils
 
 paths:
+  /get_ip:
+    get:
+      tags:
+        - ip
+      operationId: hpcutils.api.views.get_ip
+      responses:
+        200:
+          description: 'got ip'
   /health_check:
     get:
       tags:
@@ -240,6 +248,8 @@ components:
           $ref: '#/components/schemas/Walltime'
         storage_mem:
           $ref: '#/components/schemas/StorageMem'
+        email_recipients:
+          $ref: '#/components/schemas/EmailRecipients'
 
 
 
@@ -264,3 +274,6 @@ components:
     ScriptTemplateName:
       type: string
       example: div_examples.sh
+    EmailRecipients:
+      type: string
+      example: 'nlp.fyp1800@gmail.com'
